Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/SMAX_PS_InventoryCountLine__c.object-meta.xml
<CustomObject>
    <label>Inventory Count Line</label>
    <nameField>
        <label>Inventory Count Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Count Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>