Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/BD_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>BD_Approved_By__c</fullName>
    <label>Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>