Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/BD_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Confirmed_Date__c</fullName>
    <label>Confirmed Date</label>
    <type>DateTime</type>
</CustomField>