Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/BD_Difference_In_Qty__c.field-meta.xml
<CustomField>
    <fullName>BD_Difference_In_Qty__c</fullName>
    <label>Difference in Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>