Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/BD_Recount_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>BD_Recount_Requested_Date__c</fullName>
    <label>Recount Requested Date</label>
    <type>DateTime</type>
</CustomField>