Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Actual_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Actual_Serial_Numbers__c</fullName>
    <description>Denotes the actual serial numbers that are captured in an inventory count line</description>
    <inlineHelpText>Denotes the actual serial numbers that are captured in an inventory count line</inlineHelpText>
    <label>Actual Serial Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>