Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_BaseUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_BaseUnitOfMeasure__c</fullName>
    <label>Base Unit Of Measure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>