Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_BatchNumber__c</fullName>
    <label>Expected Batch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>