Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Counted_By__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Counted_By__c</fullName>
    <description>Denotes the user that counted the stock</description>
    <inlineHelpText>Denotes the user that counted the stock</inlineHelpText>
    <label>Counted By</label>
    <length>12</length>
    <type>Text</type>
</CustomField>