Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_CountedQty__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CountedQty__c</fullName>
    <label>Counted Qty</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>