Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Difference_in_Cost__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Difference_in_Cost__c</fullName>
    <formula>SMAX_PS_SAP_Calcualted_Stock_Cost__c-SMAX_PS_Counted_Product_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>