Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_DifferencePosted__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DifferencePosted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes the difference between count posted for an Inventory Count Line</description>
    <inlineHelpText>Denotes the difference between count posted for an Inventory Count Line</inlineHelpText>
    <label>Difference Posted</label>
    <type>Checkbox</type>
</CustomField>