Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_DifferenceValue__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_DifferenceValue__c</fullName>
    <formula>( SMAX_PS_CountedQty__c -  SMAX_PS_BookedQty__c ) * SMAX_PS_ProductCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>