Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_EntryUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_EntryUnitOfMeasure__c</fullName>
    <label>Entry Unit Of Measure</label>
    <length>3</length>
    <type>Text</type>
</CustomField>