Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Expected_Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Expected_Serial_Numbers__c</fullName>
    <description>Denotes the expected serial numbers that should be received for an inventory count line</description>
    <inlineHelpText>Denotes the expected serial numbers that should be received for an inventory count line</inlineHelpText>
    <label>Expected Serial Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>