Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Found_Item__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Found_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the item is a found item and was not on the inventory count document.</description>
    <inlineHelpText>Denotes that the item is a found item and was not on the inventory count document.</inlineHelpText>
    <label>Is Found Item</label>
    <type>Checkbox</type>
</CustomField>