Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Inventory_Stock_Count_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Inventory_Stock_Count_Number__c</fullName>
    <description>Inventory count auto number</description>
    <displayFormat>{0000000000}</displayFormat>
    <inlineHelpText>Inventory count auto number</inlineHelpText>
    <label>Inventory Stock Count Number</label>
    <type>AutoNumber</type>
</CustomField>