Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_InventoryCount__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_InventoryCount__c</fullName>
    <label>Inventory Count</label>
    <referenceTo>SMAX_PS_InventoryCount__c</referenceTo>
    <relationshipLabel>Inventory Count Lines</relationshipLabel>
    <relationshipName>Inventory_Count_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>