Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that an inventory count line has been deleted</description>
    <inlineHelpText>Denotes that an inventory count line has been deleted</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>