Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Is_Serialized__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Serialized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the inventory count line is serialized</description>
    <inlineHelpText>Denotes that the inventory count line is serialized</inlineHelpText>
    <label>Is Serialized</label>
    <type>Checkbox</type>
</CustomField>