Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Is_Zero_Qty__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Zero_Qty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that there is a zero qty for an inventory count line</description>
    <inlineHelpText>Denotes that there is a zero qty for an inventory count line</inlineHelpText>
    <label>Is Zero Qty</label>
    <type>Checkbox</type>
</CustomField>