Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Item_has_been_counted__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Item_has_been_counted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that the inventory count line has been counted</description>
    <inlineHelpText>Denotes that the inventory count line has been counted</inlineHelpText>
    <label>Item Has Been Counted</label>
    <type>Checkbox</type>
</CustomField>