Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product_Code__c</fullName>
    <description>Pulls product code from the product record.</description>
    <formula>SMAX_PS_Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>