Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_ProductCost__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ProductCost__c</fullName>
    <formula>IF( ISBLANK( SMAX_PS_Unit_Cost__c ) , SMAX_PS_ProductStock__r.SVMXC__Product_Cost__c, SMAX_PS_Unit_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>