Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Reason_for_Difference__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Reason_for_Difference__c</fullName>
    <label>Reason for Difference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>