Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Value_of_PhysicalInventoryCount__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Value_of_PhysicalInventoryCount__c</fullName>
    <description>Denotes the value of a physical count for an inventory count line</description>
    <inlineHelpText>Denotes the value of a physical count for an inventory count line</inlineHelpText>
    <label>Value of Physical Inventory Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>