Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_ValueofBookedQty__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ValueofBookedQty__c</fullName>
    <description>Denotes the overall value of the booked qty</description>
    <inlineHelpText>Denotes the overall value of the booked qty</inlineHelpText>
    <label>Value of Booked Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>