Perkin-UAT/force-app/main/default/objects/SMAX_PS_InventoryCountLine__c/fields/SMAX_PS_Why_Recount_Needed__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Why_Recount_Needed__c</fullName>
    <label>Why Recount Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>